add images file and images of cats and dogs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1><strong>Cats</strong> are the Best</h1>
 
-
+<img src="images/KittenCat.jpg" alt="A photo of a cute kitten.">
 
     <h2>Top 5 Reasons Why!</h2>
 
@@ -20,7 +20,7 @@
 
     <h1><strong>Dogs</strong> are the Best</h1>
 
-
+<img src="images/PuppiesDog.jpg" alt="A photo of a cute kitten.">
 
     <h2>Top 5 Reasons Why!</h2>
 
@@ -28,9 +28,9 @@
         <li>They guard your house!</li>
         <li>Dogs keep you active & healthy</li>
         <li>They can do the best tricks!</li>
-        <li>Dogs playing sound like fighting</li>
         <li>They come from Wolves!</li>
-
+        <li>Dogs will love you forever</li>
+      </ol>
 
   </body>
 </html>
