add top page relative link and links to cat and dog pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Pet Website</title>
   </head>
   <body>
-    <h1><strong>Cats</strong> are the Best</h1>
+    <h1 id="top"><strong>Cats</strong> are the Best</h1>
 
 <img src="images/KittenCat.jpg" alt="A photo of a cute kitten.">
 
@@ -17,6 +17,9 @@
       <li>Cats burry their own poop!</li>
       <li>Did we mention purring yet?</li>
     </ol>
+
+<p>Learn more reasons why <a href="https://www.oregonhumane.org/adopt/?type=cats">Cats Rule!</a>.
+  <hr />
 
     <h1><strong>Dogs</strong> are the Best</h1>
 
@@ -32,5 +35,7 @@
         <li>Dogs will love you forever</li>
       </ol>
 
+<p>Learn more reasons why <a href="https://www.youtube.com/watch?v=zHPTzFM_DU4">Dogs Rule and Cats Drool!</a>.
+      <p><a href="#top">Top of page</a></p>
   </body>
 </html>
