--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Pet Website</title>
   </head>
   <body>
@@ -18,7 +19,10 @@
       <li>Did we mention purring yet?</li>
     </ol>
 
-<p>Learn more reasons why <a href="https://www.oregonhumane.org/adopt/?type=cats">Cats Rule!</a>.
+    <h3>A Poem about Felines:</h3>
+    <p class="poem">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<p>Learn more reasons why <a href="https://www.oregonhumane.org/adopt/?type=cats">Cats Rule!</a>
   <hr />
 
     <h1><strong>Dogs</strong> are the Best</h1>
@@ -34,6 +38,9 @@
         <li>They come from Wolves!</li>
         <li>Dogs will love you forever</li>
       </ol>
+
+      <h3>A Poem about Canines:</h3>
+      <p class="poem">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <p>Learn more reasons why <a href="https://www.youtube.com/watch?v=zHPTzFM_DU4">Dogs Rule and Cats Drool!</a>.
       <p><a href="#top">Top of page</a></p>
